workshop04/examples/kuztomization/base/ws4-dov-deploy.yaml
--- # add ingress to the deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  namespace: myns
  labels:
    app: dov
    name: dov-po
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dov
      name: dov-po
  template:
    metadata:
      name: dov-po
      # namespace: myns # no need namespace because it's understood
      labels: # good to have labels for everything
        app: dov
        name: dov-po
    spec:
      containers:
        - name: dov-container
          image: chukmunnlee/dov-bear:v5
          imagePullPolicy: IfNotPresent # Always, IfNotPresent, Never
          ports:
            - name: web-port
              containerPort: 3000
            - name: metrics-port
              containerPort: 3100
          livenessProbe:
            httpGet:
              path: /healthz
              port: web-port
            periodSeconds: 30
            initialDelaySeconds: 5 #ie 35 seconds for the first probe
          resources:
            requests:
              cpu: 32m
              memory: 64Mi
            limits:
              cpu: 32m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: myns
  labels:
    app: dov
    name: dov-svc
spec:
  type: ClusterIP
  selector:
    app: dov
    name: dov-po
  ports:
    - name: svc-web-port
      port: 5000
      targetPort: web-port
    - name: svc-metrics-port
      port: 5100
      targetPort: metrics-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  namespace: myns
  labels:
    app: dov
    name: dov-ing
spec:
  ingressClassName: nginx
  rules:
    - host: dov-146.190.195.90.nip.io # use nip.io for testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dov-svc
                port:
                  name: svc-web-port # can give either name or number
                  # number: 5000
  # tls:
  #   - hosts:
  #       - dov.bgg.com
  #     secretName: dov-tls
